# natural-frontend

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-pckg.yml  build-release.yml  release.yml  test-build.yml  test-check.yml
app/: db.py  main.py  models.py
examples/simple_social_net_flask/: main.py
examples/social_network/: main.py
natural_frontend/: __init__.py  cache.py  constants.py  framework_helpers.py  frontend_generator.py  helpers.py  natural_frontend.py  natural_frontend_options.py
natural_frontend/templates/: queryForm.html
src/: fastapi_natural_frontend.py  fastapi_natural_query.py  frontend_generator.py  helpers.py
templates/: queryForm.html
