[project]
name = "natural-frontend"
version = "0.0.1"
authors = [
  { name="Axel Peytavin", email="peytavin@stanford.edu" },
  { name="Pierre Collignon", email="collignonpie@gmail.com" },
]
description = "A wrapper for FastAPI to automatically generate a frontend"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'fastapi >= 0.109.0',
  'Jinja2 >= 3.1.3',
  'openai >= 1.8.0'
]

[project.urls]
Homepage = "https://github.com/axelpey/natural-frontend"
Issues = "https://github.com/axelpey/natural-frontend/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "app",
  "cache",
]
