[tool.poetry]
name = "natural-frontend"
version = "0.1.1"
description = "A wrapper for FastAPI to automatically generate a frontend"
authors = [
  "Axel Peytavin <peytavin@stanford.edu>",
  "Pierre Collignon <collignonpie@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/axelpey/natural-frontend"
repository = "https://github.com/axelpey/natural-frontend"
documentation = "http://google.com"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.109.0"
Jinja2 = "^3.1.3"
openai = "^1.8.0"
python-multipart = "^0.0.6"
flask = "^3.0.2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "app",
  "cache",
]
